Add preprocess config.json

--- a/PreProcessor/preprocess_images.ipynb
+++ b/PreProcessor/preprocess_images.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:41.056115039Z",
-     "start_time": "2023-07-20T21:35:41.055729270Z"
+     "end_time": "2023-07-31T01:20:56.104700666Z",
+     "start_time": "2023-07-31T01:20:56.057423382Z"
     }
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -25,13 +26,13 @@
     "MIN_IMAGE_HEIGHT=256\n",
     "MAX_IMAGE_WIDTH=1280\n",
     "MAX_IMAGE_HEIGHT=1280\n",
-    "RESOURCES_PATH=\"../resources/part1/\""
+    "RESOURCES_PATH=\"../resources/\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:41.864357567Z",
-     "start_time": "2023-07-20T21:35:41.842638588Z"
+     "end_time": "2023-07-31T00:31:48.312623951Z",
+     "start_time": "2023-07-31T00:31:48.294677741Z"
     }
    }
   },
@@ -46,8 +47,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:42.669351722Z",
-     "start_time": "2023-07-20T21:35:42.652568418Z"
+     "end_time": "2023-07-31T00:31:50.482816962Z",
+     "start_time": "2023-07-31T00:31:50.470789853Z"
     }
    }
   },
@@ -74,8 +75,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:43.692224771Z",
-     "start_time": "2023-07-20T21:35:43.687899378Z"
+     "end_time": "2023-07-31T00:31:51.900160978Z",
+     "start_time": "2023-07-31T00:31:51.892859256Z"
     }
    }
   },
@@ -86,7 +87,7 @@
    "source": [
     "def remove_unacceptable_images(directory):\n",
     "    counter = 0\n",
-    "    for file in os.listdir(directory):\n",
+    "    for file in tqdm(os.listdir(directory)):\n",
     "        if is_image(file):\n",
     "            image_path = os.path.join(directory, file)\n",
     "            if check_image_size(image_path):\n",
@@ -97,8 +98,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:44.260318542Z",
-     "start_time": "2023-07-20T21:35:44.243343624Z"
+     "end_time": "2023-07-31T00:31:52.767407462Z",
+     "start_time": "2023-07-31T00:31:52.757589476Z"
     }
    }
   },
@@ -110,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 files removed.\n"
+      "3655 files removed.\n"
      ]
     }
    ],
@@ -120,8 +121,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:45.301126826Z",
-     "start_time": "2023-07-20T21:35:44.720413945Z"
+     "end_time": "2023-07-31T00:32:07.922456066Z",
+     "start_time": "2023-07-31T00:31:53.350331362Z"
     }
    }
   },
@@ -157,8 +158,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:45.700123034Z",
-     "start_time": "2023-07-20T21:35:45.673053443Z"
+     "end_time": "2023-07-31T00:32:12.217977307Z",
+     "start_time": "2023-07-31T00:32:12.199643355Z"
     }
    }
   },
@@ -168,7 +169,7 @@
    "outputs": [],
    "source": [
     "def resize_dir_images(directory):\n",
-    "    for file in os.listdir(directory):\n",
+    "    for file in tqdm(os.listdir(directory)):\n",
     "        if is_image(file):\n",
     "            try:\n",
     "                resize_image(os.path.join(directory, file))\n",
@@ -180,8 +181,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:46.163783202Z",
-     "start_time": "2023-07-20T21:35:46.155215245Z"
+     "end_time": "2023-07-31T00:32:12.813685574Z",
+     "start_time": "2023-07-31T00:32:12.796956058Z"
     }
    }
   },
@@ -203,8 +204,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:56.948165080Z",
-     "start_time": "2023-07-20T21:35:46.530008054Z"
+     "end_time": "2023-07-31T01:20:51.399181335Z",
+     "start_time": "2023-07-31T00:32:13.982141709Z"
     }
    }
   },
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "def square_crop_image(image_path):\n",
@@ -234,18 +235,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:56.953961072Z",
-     "start_time": "2023-07-20T21:35:56.951497529Z"
+     "end_time": "2023-07-31T01:21:00.936193574Z",
+     "start_time": "2023-07-31T01:21:00.898092485Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def square_crop_dir_images(directory):\n",
-    "    for file in os.listdir(directory):\n",
+    "    for file in tqdm(os.listdir(directory)):\n",
     "        if is_image(file):\n",
     "            try:\n",
     "                square_crop_image(os.path.join(directory, file))\n",
@@ -257,20 +258,34 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:35:57.000797216Z",
-     "start_time": "2023-07-20T21:35:56.955788438Z"
+     "end_time": "2023-07-31T01:21:01.875660744Z",
+     "start_time": "2023-07-31T01:21:01.855528441Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20451/20451 [29:17<00:00, 11.63it/s] "
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "all images square cropped.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -280,8 +295,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-20T21:36:08.796996224Z",
-     "start_time": "2023-07-20T21:35:57.001217377Z"
+     "end_time": "2023-07-31T01:50:20.276832372Z",
+     "start_time": "2023-07-31T01:21:02.413328938Z"
     }
    }
   },
